--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logo-withoutbg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BuildBridge</title>
   </head>
